# codesearch-rs

./: .gitignore  Cargo.toml  build.rs  config.yaml
src/: main.rs
src/api/: handlers.rs  mod.rs  models.rs
src/config/: index.rs  mod.rs  repo.rs  server.rs
src/engine/: metadata.rs  mod.rs  search_engine.rs  search_error.rs  simple_schema.rs
src/search/: code_schema.rs  engine.rs  error.rs  fs_search_engine.rs  mod.rs  simple_text.rs
src/utils/: misc.rs  mod.rs  validators.rs
web/: bun.lockb  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.css  main.tsx
web/src/api/: hooks.ts  index.ts
web/src/components/: CodeBlock.tsx  SearchBox.tsx  SearchFileContent.tsx  SearchFileList.tsx
web/src/components/layout/: Footer.tsx
web/src/components/search/: FileContent.tsx  SearchBox.tsx  SearchFileContent.tsx  SearchFileList.tsx
web/src/hooks/: debounce.ts
web/src/lib/: convertor.ts  extToLang.ts  http-client.ts
web/src/models/: index.ts
web/src/pages/: SearchPage.tsx  index.tsx
web/src/routes/: __root.tsx  index.lazy.tsx
