[package]
name = "search"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = { version = "0.9.31", features = [] }
serde_json = "1.0.113"
async-trait = "0.1.77"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
chrono = { version = "0.4.33", features = ["serde"] }
tantivy = { version = "0.21.1" }
rayon = "1.8.1"
walkdir = "2.4.0"
warp = { version = "0.3.6"}
log = "0.4.20"
env_logger = "0.11.1"
include_dir = "0.7.3"
sled = "0.34.7"
validator = { version = "0.16.1", features = ["derive"] }
dirs = "5.0.1"
anyhow = "1.0.79"
mime_guess = "2.0.4"

